update README file with usage instructions